# WeatherApp

./: .gitignore  Dockerfile  README.md  compose.yml  mypy.ini  pyproject.toml
nginx/: django.conf
weathersite/: db.sqlite3  manage.py  weather_location.json
weathersite/templates/: base.html
weathersite/users/: forms.py  tests.py  urls.py  utils.py  views.py
weathersite/users/templates/users/: login.html  register.html
weathersite/users/templates/users/includes/: nav_users.html
weathersite/weather/: exceptions.py  models.py  services.py  urls.py  utils.py  views.py
weathersite/weather/migrations/: 0001_initial.py  0002_alter_location_latitude_alter_location_longitude.py  0003_rename_latitude_location_latitude_and_more.py  0004_alter_location_latitude_alter_location_longitude.py  0005_rename_user_id_location_user.py
weathersite/weather/static/weather/css/: style.css
weathersite/weather/templates/weather/: index.html  locations.html  not_found.html
weathersite/weather/templates/weather/includes/: location_card.html  nav.html  warning_error.html
weathersite/weather/tests/: test_services.py  test_views.py
weathersite/weathersite/: asgi.py  settings.py  urls.py  wsgi.py
