[project]
name = "weather-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry-DVal",email = "149782954+Dmitry-DVal@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "django (>=5.2,<6.0)",
    "colorlog (>=6.9.0,<7.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "requests (>=2.32.3,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"
mypy = "^1.15.0"
django-stubs = "^5.2.0"

